# owaf

./: .env  .gitignore  Cargo.toml  README.md  dev.Dockerfile
.devcontainer/: .env  devcontainer.json  docker-compose.yml
owaf-core/: .cursorrules  .env  .gitignore  Cargo.toml  config.toml  proxy.hcl
owaf-core/.junie/: guidelines.md
owaf-core/migrations/: 20231001143156_users.sql
owaf-core/src/: main.rs
owaf-core/src/config/: mod.rs  proxy_config.rs
owaf-core/src/db/: mod.rs
owaf-core/src/hoops/: mod.rs
owaf-core/src/models/: mod.rs
owaf-core/src/routers/: demo.rs  mod.rs
owaf-core/src/utils/: mod.rs  rate_limit.rs
owaf-core/views/: error_404.html  user_list_page.html
owaf-dashboard/: Cargo.toml
owaf-dashboard/src/: main.rs
owaf-dashboard/views/: log_list_frag.html  log_list_page.html  proxy_config_frag.html  proxy_config_page.html
owaf-server/: Cargo.toml
owaf-server/src/: main.rs
src/: error.rs  main.rs
src/db/: mod.rs
src/hoops/: custom_middleware_example.rs
views/: login.html  user_list_frag.html
