[package]
name = "owaf-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = {version = "0.76.0", features = ["full", "serve-static"]}
rinja = "0.3.5"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["std", "fmt", "env-filter"]}
