[package]
name = "owaf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = {version = "0.76.0", features = ["full", "cors"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
hcl-rs = "0.19.6"
tokio = {version = "1", features = ["full"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "sqlite"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3.19", features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"]}
